--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -168,8 +168,8 @@ jobs:
       - name: Run Build
         run: ./ops/build/run_buildweb.sh --env
 
-  fullstack-test:
-    name: Fullstack Test
+  ops-test:
+    name: Ops Fullstack Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -187,15 +187,17 @@ jobs:
         run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Start Container
         run: ENV='CI' vagrant up
-      - name: Test Fullstack
-        run: ./ops/test_fullstack.py
+      - name: Test Vagrant Startup
+        run: ./ops/test_vagrant_startup.py
+      - name: Test Ops Fullstack
+        run: ./ops/test_ops.sh
       - name: Comment Webpage Screenshot
         uses: saadmk11/comment-webpage-screenshot@v0.5
         with:
           capture_urls: "http://172.17.0.1:8080, http://172.17.0.1:8080/gameday"
 
   automerge:
-    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, fullstack-test]
+    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, ops-test]
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
