--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -168,8 +168,8 @@ jobs:
       - name: Run Build
         run: ./ops/build/run_buildweb.sh --env
 
-  fullstack-test:
-    name: Fullstack Test
+  ops-test:
+    name: Ops Fullstack Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -177,25 +177,39 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.8
-      - name: Install Dependencies
+      - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
+      - name: Set up Node
+        uses: actions/setup-node@v2.5.0
+        with:
+          node-version: "14"
+      - name: Cache node modules
+        uses: actions/cache@v2.1.7
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Install Node Dependencies
+        run: npm install
       - name: Install Vagrant
         run: sudo apt-get install vagrant
       - name: Create keys file
         run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Start Container
         run: ENV='CI' vagrant up
-      - name: Test Fullstack
-        run: ./ops/test_fullstack.py
+      - name: Test Vagrant Startup
+        run: ./ops/test_vagrant_startup.py
+      - name: Test Ops Fullstack
+        run: ./ops/test_ops.sh
       - name: Comment Webpage Screenshot
         uses: saadmk11/comment-webpage-screenshot@v0.5
         with:
           capture_urls: "http://172.17.0.1:8080, http://172.17.0.1:8080/gameday"
 
   automerge:
-    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, fullstack-test]
+    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, ops-test]
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
