--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -217,4 +217,4 @@ jobs:
     steps:
       - uses: fastify/github-action-merge-dependabot@v3.0.2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PROTECTED_BRANCH_PUSH }}
