--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -206,9 +206,10 @@ jobs:
       - name: Generate screenshots
         id: generate_screenshots
         run: |
-          ./ops/generate_screenshots.sh
+          ./ops/generate_screenshots.py
           echo "::set-output message=$(cat ci_screenshots/message.md)"
-      - uses: phulsechinmay/rewritable-pr-comment@v0.2.1
+      - name: Comment screenshots on PR
+        uses: phulsechinmay/rewritable-pr-comment@v0.2.1
         with:
           message: ${{ steps.generate_screenshots.output.message }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
