--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -218,7 +218,7 @@ jobs:
       - name: Generate screenshots
         id: generate_screenshots
         run: |
-          ./ops/generate_screenshots.py
+          ./ops/generate_screenshots.py $ {{ secrets.GITHUB_TOKEN }}
           MESSAGE=$(cat ci_screenshots/message.md)
           MESSAGE="${MESSAGE//'%'/'%25'}"
           MESSAGE="${MESSAGE//$'\n'/'%0A'}"
