Fix concurrency group

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,7 +7,7 @@ on:
     branches: [ py3 ]
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: codeql-${{ github.head_ref }}
   cancel-in-progress: true
 
 jobs:
