--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,7 +6,7 @@ on:
       - py3
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: ci-${{ github.head_ref }}
   cancel-in-progress: true
 
 jobs:
