Manually generate screenshots and message (#4089)
* Manually generate screenshots and message

* Fix script name

* Temporarily screenshot prod

* Cancel codeql in progress

* python3 header

* Fix bug when no dir

* Use npm run

* Properly set output message

* Bugfix

* Install all requirements

* install capture-website globally

* Update message

* multi-line output workaround

* Upload screenshots WIP

* Github upload

* Cleanup

* fixes

* Fix spacing

* Point to local instance

* Fix concurrency group

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ py3 ]
 
+concurrency:
+  group: codeql-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   analyze:
     name: Analyze
