--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - py3
 
+concurrency:
+  group: ci-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   py3-type:
     name: "[py3] Type Check"
@@ -177,10 +181,16 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.8
+      - name: Cache pip
+        uses: actions/cache@v2.1.7
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
       - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install -r requirements.txt
       - name: Set up Node
         uses: actions/setup-node@v2.5.1
         with:
@@ -192,7 +202,9 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
       - name: Install Node Dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install -g capture-website-cli
       - name: Install Vagrant
         run: sudo apt-get install vagrant
       - name: Create keys file
@@ -203,10 +215,21 @@ jobs:
         run: ./ops/test_vagrant_startup.py
       - name: Test Ops Fullstack
         run: ./ops/test_ops.sh
-      - name: Comment Webpage Screenshot
-        uses: saadmk11/comment-webpage-screenshot@v0.5
+      - name: Generate screenshots
+        id: generate_screenshots
+        run: |
+          ./ops/generate_screenshots.py ${{ secrets.GITHUB_TOKEN }}
+          MESSAGE=$(cat ci_screenshots_message.md)
+          MESSAGE="${MESSAGE//'%'/'%25'}"
+          MESSAGE="${MESSAGE//$'\n'/'%0A'}"
+          MESSAGE="${MESSAGE//$'\r'/'%0D'}"
+          echo "::set-output name=message::$MESSAGE"
+      - name: Comment screenshots on PR
+        uses: phulsechinmay/rewritable-pr-comment@v0.2.1
         with:
-          capture_urls: "http://172.17.0.1:8080, http://172.17.0.1:8080/gameday"
+          message: ${{ steps.generate_screenshots.outputs.message }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COMMENT_IDENTIFIER: "screenshots-comment-rewritable-action"
 
   automerge:
     needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, ops-test]
