--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 .pyre/
 .vagrant/
 
+ci_screenshots_message.md
 .coverage
 coverage.xml
 .node_coverage/
@@ -24,7 +25,7 @@ src/backend/web/static/javascript/tba_js/tba_keys.js
 node_modules/
 
 ops/dev/keys/
-# Check in empty storage folder, ignore everythign in folder
+# Check in empty storage folder, ignore everything in folder
 ops/dev/storage/*
 !ops/dev/storage/.gitkeep
 src/backend/web/static/javascript/tba_js/tba_keys.js
