--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -240,7 +240,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Setup Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
@@ -264,7 +264,7 @@ jobs:
           name: web-build
           path: src/build
       - name: Setup Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
@@ -283,7 +283,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Setup Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
@@ -302,7 +302,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Setup Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
