--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -218,21 +218,13 @@ jobs:
         run: ./ops/test_vagrant_startup.py
       - name: Test Ops Fullstack
         run: ./ops/test_ops.sh
-      - name: Generate screenshots
-        id: generate_screenshots
-        run: |
-          ./ops/generate_screenshots.py ${{ secrets.GITHUB_TOKEN }}
-          MESSAGE=$(cat ci_screenshots_message.md)
-          MESSAGE="${MESSAGE//'%'/'%25'}"
-          MESSAGE="${MESSAGE//$'\n'/'%0A'}"
-          MESSAGE="${MESSAGE//$'\r'/'%0D'}"
-          echo "::set-output name=message::$MESSAGE"
-      - name: Comment screenshots on PR
-        uses: phulsechinmay/rewritable-pr-comment@v0.2.1
+      - name: Capture screenshots
+        run: ./ops/pr_screenshots/capture_screenshots.py
+      - name: Upload screenshots artifact
+        uses: actions/upload-artifact@v2
         with:
-          message: ${{ steps.generate_screenshots.outputs.message }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMENT_IDENTIFIER: "screenshots-comment-rewritable-action"
+          name: ci_screenshots
+          path: ci_screenshots.pickle
 
   automerge:
     needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, ops-test]
