--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -228,6 +228,7 @@ jobs:
 
   automerge:
     needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, ops-test]
+    if: secrets.PROTECTED_BRANCH_PUSH
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
