Only run automerge if secret exists

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -234,5 +234,6 @@ jobs:
       contents: write
     steps:
       - uses: fastify/github-action-merge-dependabot@v3.0.2
+        if: ${{ secrets.PROTECTED_BRANCH_PUSH }} != ""
         with:
           github-token: ${{ secrets.PROTECTED_BRANCH_PUSH }}
