--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,10 @@
       "host": "0.0.0.0",
       "port": 9099
     },
+    "database": {
+      "host": "0.0.0.0",
+      "port": 9000
+    },
     "ui": {
       "host": "0.0.0.0",
       "enabled": true
