--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -239,12 +239,15 @@ jobs:
         uses: actions/setup-python@v2.3.1
         with:
           python-version: 3.8
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Setup Google Cloud Platform
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy
         run: gcloud app deploy src/queue.yaml
   deploy-web:
@@ -263,12 +266,15 @@ jobs:
         with:
           name: web-build
           path: src/build
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Setup Google Cloud Platform
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy
         run: ./ops/deploy/deploy_module.sh src/web.yaml
   deploy-api:
@@ -282,12 +288,15 @@ jobs:
         uses: actions/setup-python@v2.3.1
         with:
           python-version: 3.8
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Setup Google Cloud Platform
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy
         run: ./ops/deploy/deploy_module.sh src/api.yaml
   deploy-tasks-io:
@@ -301,11 +310,14 @@ jobs:
         uses: actions/setup-python@v2.3.1
         with:
           python-version: 3.8
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Setup Google Cloud Platform
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy
         run: ./ops/deploy/deploy_module.sh src/tasks_io.yaml
