--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -6,6 +6,8 @@ on:
   pull_request:  # TODO: Remove before merge
     branches: [ py3 ]
 
+concurrency: docker-publish-${{ github.ref }}
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/tba-py3-dev
@@ -14,7 +16,7 @@ jobs:
   build_and_push:
     name: Build and Push 
     runs-on: ubuntu-latest
-    if: contains(github.event.commits[0].message, '[dockerbuild]') == true
+    if: contains(github.event.commits[0].message, '[dockerpublish]') == true
     steps:
     - uses: actions/checkout@v2
     - name: Log in to the Container registry
