--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -16,7 +16,7 @@ jobs:
   build_and_push:
     name: Build and Push 
     runs-on: ubuntu-latest
-    if: contains(github.event.commits[0].message, '[dockerpublish]') == true
+    # if: contains(github.event.commits[0].message, '[dockerpublish]') == true
     steps:
     - uses: actions/checkout@v2
     - name: Log in to the Container registry
