--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -213,7 +213,7 @@ jobs:
       - name: Create keys file
         run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Start Container
-        run: TBA_LOCAL_DOCKERFILE=true vagrant up
+        run: vagrant up
       - name: Test Vagrant Startup
         run: ./ops/test_vagrant_startup.py
       - name: Test Ops Fullstack
