--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -222,7 +222,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      - name: Build
+      - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -230,12 +230,12 @@ jobs:
           tags: local/tba-py3-dev:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-      - name: Start Container
-        run: vagrant up
-      - name: Move Docker cache  # This is necessary to prevent cache from growing forever.
+      - name: Move Docker Cache  # This is necessary to prevent cache from growing forever.
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      - name: Start Container
+        run: vagrant up
       - name: Test Vagrant Startup
         run: ./ops/test_vagrant_startup.py
       - name: Test Ops Fullstack
