--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -220,8 +220,7 @@ jobs:
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          restore-keys: ${{ runner.os }}-buildx-
       - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
