Hash dockerfile for cache key

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -219,7 +219,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ hashFiles('./ops/dev/docker/Dockerfile') }}
           restore-keys: ${{ runner.os }}-buildx-
       - name: Build Docker Image
         uses: docker/build-push-action@v2
