--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -208,14 +208,14 @@ jobs:
         run: |
           npm ci
           npm install -g capture-website-cli
-      - name: Install Vagrant
-        run: sudo apt-get install vagrant
+      # - name: Install Vagrant
+      #   run: sudo apt-get install vagrant
       - name: Create keys file
         run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      - name: Cache Docker layers
+      - name: Cache Docker Layers
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
