--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -184,37 +184,37 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.8
-      - name: Cache pip
-        uses: actions/cache@v2.1.7
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
-      - name: Install Python Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Set up Node
-        uses: actions/setup-node@v2.5.1
-        with:
-          node-version: "14"
-      - name: Cache node modules
-        uses: actions/cache@v2.1.7
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
-      - name: Install Node Dependencies
-        run: |
-          npm ci
-          npm install -g capture-website-cli
+      # - name: Cache pip
+      #   uses: actions/cache@v2.1.7
+      #   with:
+      #     path: ~/.cache/pip
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+      #     restore-keys: ${{ runner.os }}-pip-
+      # - name: Install Python Dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
+      # - name: Set up Node
+      #   uses: actions/setup-node@v2.5.1
+      #   with:
+      #     node-version: "14"
+      # - name: Cache node modules
+      #   uses: actions/cache@v2.1.7
+      #   with:
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: ${{ runner.os }}-node-
+      # - name: Install Node Dependencies
+      #   run: |
+      #     npm ci
+      #     npm install -g capture-website-cli
       # - name: Install Vagrant
       #   run: sudo apt-get install vagrant
-      - name: Create keys file
-        run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Create keys file
+      #   run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v1
       # - name: Cache Docker Layers
       #   uses: actions/cache@v2
       #   with:
