Use ghcr image as cache

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -227,7 +227,9 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./ops/dev/docker
           tags: local/tba-py3-dev:latest
-          cache-from: type=gha
+          cache-from: |
+            type=gha
+            ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
           cache-to: type=gha,mode=max
       # - name: Move Docker Cache  # This is necessary to prevent cache from growing forever.
       #   run: |
