--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -217,6 +217,8 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: network=host
       - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
