--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -19,9 +19,17 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
     - name: Build and push Docker image
       uses: docker/build-push-action@v2.7.0
       with:
+        builder: ${{ steps.buildx.outputs.name }}
         context: ./ops/dev/docker
         push: true
         tags: ghcr.io/${{ github.repository }}/tba-py3-dev:latest
+        cache-from: |
+          type=gha
+          ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
+        cache-to: type=gha,mode=max
