Codeql ignore directories

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -31,6 +31,7 @@ jobs:
       uses: github/codeql-action/init@v1
       with:
         languages: ${{ matrix.language }}
+        config-file: ./.github/codeql_config.yml
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
