--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -6,6 +6,47 @@ dispatch:
 - url: "www.thebluealliance.com/about"
   service: py3-web
 
+- url: "www.thebluealliance.com/events"
+  service: py3-web
+
+- url: "www.thebluealliance.com/events/*"
+  service: py3-web
+
+- url: "www.thebluealliance.com/event/*/insights"
+  service: default
+
+- url: "www.thebluealliance.com/event/*"
+  service: py3-web
+    
+- url: "www.thebluealliance.com/gameday"
+  service: py3-web
+    
+- url: "www.thebluealliance.com/gameday/*"
+  service: py3-web
+
+- url: "www.thebluealliance.com/team*"
+  service: py3-web
+
+- url: "www.thebluealliance.com/match/*"
+  service: py3-web
+
+- url: "www.thebluealliance.com/py3_css/*"
+  service: py3-web
+
+- url: "www.thebluealliance.com/py3_javascript/*"
+  service: py3-web
+    
+- url: "www.thebluealliance.com/watch/*"
+ service: py3-web
+
+# Send low-frequency long-running tasks to backend module
+- url: "*/backend-tasks/*"
+  service: py3-tasks-io
+
+# Handles latency-insensive tasks
+- url: "*/tasks/*"
+  service: py3-tasks-io
+
 # Python 3 Migration
 - url: "py3.thebluealliance.com/api/*"
   service: py3-api
@@ -22,10 +63,6 @@ dispatch:
   service: api
 
 # Send low-frequency long-running tasks to backend module
-- url: "*/backend-tasks/*"
-  service: backend-tasks
-
-# Send low-frequency long-running tasks to backend module
 # Uses B2 instance for higher CPU/memory limits
 - url: "*/backend-tasks-b2/*"
   service: backend-tasks-b2
@@ -33,10 +70,6 @@ dispatch:
 # Endpoints for internal client API
 - url: "*/clientapi/*"
   service: clientapi
-
-# Handles latency-insensive tasks
-- url: "*/tasks/*"
-  service: tasks
 
 # Send everything else to default module
 - url: "*/"
