--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -6,22 +6,10 @@ dispatch:
 - url: "www.thebluealliance.com/about"
   service: py3-web
 
-- url: "www.thebluealliance.com/events"
-  service: py3-web
-
-- url: "www.thebluealliance.com/events/*"
-  service: py3-web
-
-- url: "www.thebluealliance.com/event/*/insights"
-  service: default
-
-- url: "www.thebluealliance.com/event/*"
+- url: "www.thebluealliance.com/event*"
   service: py3-web
     
-- url: "www.thebluealliance.com/gameday"
-  service: py3-web
-    
-- url: "www.thebluealliance.com/gameday/*"
+- url: "www.thebluealliance.com/gameday*"
   service: py3-web
 
 - url: "www.thebluealliance.com/team*"
