--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -26,6 +26,10 @@ dispatch:
     
 - url: "www.thebluealliance.com/watch/*"
   service: py3-web
+  
+# APIv3 on py3
+- url: "www.thebluealliance.com/api/v3/status"
+  service: py3-api
 
 # Send low-frequency long-running tasks to backend module
 - url: "*/backend-tasks/*"
