Dispatch APIv3 docs to py3 (#4207)
[clowntown] [dispatchonly]

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -43,6 +43,10 @@ dispatch:
 - url: "py3.thebluealliance.com/api/*"
   service: py3-api
 
+# API docs
+- url: "*/apidocs/v3"
+  service: api
+
 - url: "py3.thebluealliance.com/*"
   service: py3-web
 
