Route /api/* to py3
We need to include the trusted API too.

This does it all as one route to conserve number of entries

This will (finally) break apiv2, so we'll see if anyone complains

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -27,8 +27,8 @@ dispatch:
 - url: "www.thebluealliance.com/watch/*"
   service: py3-web
   
-# APIv3 on py3
-- url: "www.thebluealliance.com/api/v3/*"
+# APIs on py3 (both apiv3 and trusted api)
+- url: "www.thebluealliance.com/api/*"
   service: py3-api
 
 # Send low-frequency long-running tasks to backend module
