Fix Docker build in fullstack test (#4465)
[dockerpublish] [nodeploy]

* Disable build cache

* Revert "Disable build cache"

This reverts commit 1380a7cfbf34d8644aff4a877d4d04db0185a4b5.

* Bump docker to python 3.10

* Add custom PPA for python

--- a/ops/dev/docker/Dockerfile
+++ b/ops/dev/docker/Dockerfile
@@ -6,16 +6,21 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 
 # Get base system dependencies
 RUN apt-get update && apt-get install -y \
-  wget \
-  curl \
-  unzip \
-  sudo \
-  jq \
-  tmux \
-  vim \
-  openssh-server
+    wget \
+    curl \
+    unzip \
+    sudo \
+    jq \
+    tmux \
+    vim \
+    openssh-server
 
-# Setup python environmenet
+# Needed for Python 3.9
+RUN apt-get install software-properties-common -y
+RUN add-apt-repository ppa:deadsnakes/ppa -y
+RUN apt-get update
+
+# Setup python environment
 ENV PYTHON_VERSION python3.9
 RUN apt-get install -y \
     "$PYTHON_VERSION" \
